[package]
name = "jfifdump-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.jfifdump]
path = "../jfifdump"

[[bin]]
name = "reader"
path = "fuzz_targets/reader.rs"
test = false
doc = false
bench = false
