[package]
name = "jfifdump"
version = "0.5.0"
description = "Read and dump structure of a jpeg file"
authors = ["Volker Ströbel <volkerstroebel@mysurdity.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["multimedia::images"]
keywords = ["jpg", "jpeg", "image"]
readme = "../README.md"
repository = "https://github.com/vstroebel/jfifdump.git"

[features]
default = []
json = ["jzon"]

[dependencies]
jzon = { version = "0.12", optional = true }